--- a/Docker/EjerciciosDocker/Tarea10/10.md
+++ b/Docker/EjerciciosDocker/Tarea10/10.md
@@ -18,19 +18,57 @@ docker commit contenedor_a61 TuNombreUsuarioDockerHub/a61
 
 docker push TuNombreUsuarioDockerHub/a61
 
-![]()
 
-![]()
 
-![]()
+## 2.Parte
 
-![]()
+### Crear el archivo Dockerfile.
 
-![]()
+#### Partir de la imagen base php:7.4-apache
+FROM php:7.4-apache
 
-![]()
+####  Actualizar el sistema e instalar nano y git
+RUN apt update && apt install -y nano git
 
-![]()
+####  Crear el archivo index.html en el directorio raíz de Apache
+RUN echo "HOLA SOY XXXXXX" > /var/www/html/index.html
+
+####  Crear el archivo info.php en el directorio raíz de Apache
+RUN echo "<?php phpinfo(); ?>" > /var/www/html/info.php
+
+####  Exponer el puerto 80
+EXPOSE 80
+
+### Construir la imagen a partir del Dockerfile:
+
+docker build -t rsansan079/a62 .
+
+### Subir la imagen a DockerHub:
+
+docker push rsansan079/a62 .
+
+
+
+
+
+
+
+
+
+
+![](https://github.com/rsansan079/Despliegue-de-Aplicaciones-Web/blob/master/Docker/EjerciciosDocker/Tarea10/dnsutils.jpg)
+
+![](https://github.com/rsansan079/Despliegue-de-Aplicaciones-Web/blob/master/Docker/EjerciciosDocker/Tarea10/imagen.jpg)
+
+![](https://github.com/rsansan079/Despliegue-de-Aplicaciones-Web/blob/master/Docker/EjerciciosDocker/Tarea10/inet.jpg)
+
+![](https://github.com/rsansan079/Despliegue-de-Aplicaciones-Web/blob/master/Docker/EjerciciosDocker/Tarea10/nano.jpg)
+
+![](https://github.com/rsansan079/Despliegue-de-Aplicaciones-Web/blob/master/Docker/EjerciciosDocker/Tarea10/push.jpg)
+
+![](https://github.com/rsansan079/Despliegue-de-Aplicaciones-Web/blob/master/Docker/EjerciciosDocker/Tarea10/vim.jpg)
+
+![](https://github.com/rsansan079/Despliegue-de-Aplicaciones-Web/blob/master/Docker/EjerciciosDocker/Tarea10/usuario.jpg)
 
 
 
